fixing book style, the spacing and make it responsive Realtes #38

--- a/RecommendedPage/recommended.css
+++ b/RecommendedPage/recommended.css
@@ -52,10 +52,13 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
 .container{
 
   width: 91.5vw;
-  margin: auto;
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
+  margin: auto;
 
-  justify-content: space-between;
+}
 
+.book-image{
+margin: .5rem;
 }
